tests/language_modules/04_types/invalid_semantics/duplicate_error_name.vf
module DuplicateErrorName

error InvalidAmount
error InvalidAmount

end DuplicateErrorName